[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WORMTRACKATRON7000"
version = "0.2.0"
authors = [
    { name = "Stefan Rogers-Coltman", email = "srogers@mrc-lmb.cam.ac.uk" },
]
description = "A tool for tracking worm positions on plates with food patches."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.4.0",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "PyQt6==6.8.0",
]

[project.scripts]
wormtrack = "wormtrackatron7000.main:main"  # This makes your script runnable from terminal